# webp

./: .gitignore  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml
.github/workflows/: rust.yml
examples/: animation.rs  animation_decode.rs  convert.rs  convert_by_args.rs
src/: animation_decoder.rs  animation_encoder.rs  decoder.rs  encoder.rs  lib.rs  shared.rs
