[package]
name = "webp"
version = "0.3.1"
authors = ["Jared Forth <jaredforthdev@gmail.com>"]
edition = "2024"

description = "WebP conversion library."

homepage = "https://github.com/jaredforth/webp"
repository = "https://github.com/jaredforth/webp.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/webp"
keywords = ["image", "webp", "conversion"]
categories = ["external-ffi-bindings"]

[dependencies]
libwebp-sys = { git = "https://github.com/lucascompython/libwebp-sys", branch = "master" } # Change to libwebp-sys crate once: https://github.com/NoXF/libwebp-sys/pull/37 is aproved
image = { version = "^0.25.0", default-features = false, optional = true }

[features]
default = ["img"]
img = ["image"]

[dev-dependencies]
image = "0.25"
